Fix 403 on import: skip JWT filter for OPTIONS preflight, allow all CORS headers